2019-12-05 Wiley E. Hill <wileyhill@gmail.com>

    * src/globals.c: Include glib.h instead of gattrib.h.

    * gattrib/src/s_table.c: Fix BUG; Revise s_table_add_column to use pointer to
      reallocated memory, new_table, when shifting records.

2019-12-04 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtkitementry.c: Remove reference to GTK+ Team in file header,
      the files were not distributed with GTKK+ nor were the files available at
      ftp://ftp.gtk.org/pub/gtk. Update/revise section header.

2019-12-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_string_list.c: Utilize geda_strdup macro to shorten line lengths, redo
      s_string_list_insert to actually insert a new record into the old list instead
      of recreating an entirely new list.

    * src/x_dialog.c: Fix inadvertent copy/paste over gtk_widget_grab_focus.

2019-11-30 Wiley E. Hill <wileyhill@gmail.com>

    * po/en_GB.po: Update Great Britain.

    * po/es.po: Update Spanish translations.

    * po/fa.po: Update Persian translations.

    * po/fr.po: Update French translations.

    * po/gl.po: Update Galician translations.

    * po/hu.po: Update Hungarian translations.

    * po/it.po: Update Italian translations.

    * po/ja.po: Update Japanese translations

    * po/ml.po: Updated Malayalam translations.

2019-11-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_toplevel.c: Revise s_toplevel_add_new_attrib to set sheet_head
      CHANGED member.

    * src/x_dialog.c: Revise x_dialog_new_attrib to set focus to the entry.

2019-11-23 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.

    * po/ar.po: Update Arabic translations.

    * po/bg.po: Update Bulgarian translations.

    * po/bs.po: Update Bosnian translations

    * po/ca.po: Update Catalan translations.

    * po/da.po: Update Danish translations.

    * po/de.po: Update German translations.

    * po/el.po: Update Greek translations.
