@@ -1,3 +1,7 @@
+2019-12-06 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/s_sheet_data.c: Shorten attribute name string in function arguments.
+
 2019-12-05 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/globals.c: Include glib.h instead of gattrib.h.
